Screenshot feature added

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,7 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>MavenTest02.setupStart</td></tr>
-<tr><td>MavenTest02.setupEnd</td></tr>
-<tr><td>MavenTest02.test01Start</td></tr>
-<tr><td>MavenTest02.test01End</td></tr>
-<tr><td>MavenTest02.quitBrowserStart</td></tr>
-<tr><td>MavenTest02.quitBrowserEnd</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
