--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b58980">  <td>20/01/14 15:16:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MavenTest02.setup()[pri:0, instance:com.MavenTest02@6b9651f3]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1885996206</td>   <td></td> </tr>
-<tr bgcolor="b58980">  <td>20/01/14 15:16:21</td>   <td>4746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MavenTest02.test01()[pri:0, instance:com.MavenTest02@6b9651f3]">test01</td> 
-  <td>main@1885996206</td>   <td></td> </tr>
-<tr bgcolor="b58980">  <td>20/01/14 15:16:24</td>   <td>8260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MavenTest02.quitBrowser()[pri:0, instance:com.MavenTest02@6b9651f3]">&lt;&lt;quitBrowser</td> 
-<td>&nbsp;</td>  <td>main@1885996206</td>   <td></td> </tr>
+<tr bgcolor="bc9687">  <td>20/01/17 14:19:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MavenTest03.beforeMethod()[pri:0, instance:com.MavenTest03@623a8092]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@297602875</td>   <td></td> </tr>
+<tr bgcolor="bc9687">  <td>20/01/17 14:19:37</td>   <td>60</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MavenTest03.testCase1()[pri:0, instance:com.MavenTest03@623a8092]">testCase1</td> 
+  <td>main@297602875</td>   <td></td> </tr>
+<tr bgcolor="bc9687">  <td>20/01/17 14:19:37</td>   <td>70</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MavenTest03.afterMethod()[pri:0, instance:com.MavenTest03@623a8092]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
